--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,10 @@
 @import "~ng-snotify/styles/material.scss";
 
 /*fullcalendar*/
-@import '~@fullcalendar/core/main.css';
-@import '~@fullcalendar/daygrid/main.css';
-@import '~@fullcalendar/timegrid/main.css';
-@import '~@fullcalendar/bootstrap/main.css';
+// @import '~@fullcalendar/core/main.css';
+// @import '~@fullcalendar/daygrid/main.css';
+// @import '~@fullcalendar/timegrid/main.css';
+// @import '~@fullcalendar/bootstrap/main.css';
 
 //custom
 
