--- a/src/app/components/mission/calendrier/calendrier.component.html
+++ b/src/app/components/mission/calendrier/calendrier.component.html
@@ -69,7 +69,7 @@
               </div>
               <!-- Card Body -->
               <div class="card-body">
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col-md-6 mb-4">
                     <div class="d-flex flex-row align-items-center justify-content-start subHeaderAction">
 
@@ -136,12 +136,11 @@
                     </div>
                   </div>
 
-                </div>
+                </div> -->
 
                 <div class="row">
                   <div class="col-md-12">
-                    <full-calendar *ngIf="options" #calendar [events]="SOURCE" [header]="options.header"
-                      [locale]="options.locale" [plugins]="options.plugins" (eventClick)="eventClick($event)">
+                    <full-calendar *ngIf="options" #calendar [options]='options'>
                     </full-calendar>
                   </div>
                 </div>
