--- a/src/app/modules/transport/automobile/panne/panne.component.html
+++ b/src/app/modules/transport/automobile/panne/panne.component.html
@@ -30,17 +30,18 @@
             <table class="table  table-hover table-sm mb-0 " [class.loading]="dataHelper.loading$ | async">
                 <tbody>
                     <tr class="barder-0">
-                        <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b">Automobile</th>
+                        <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b" *ngIf="!_automobileId">Vehicule</th>
                         <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b">Type de Pannes</th>
                         <th class="tx-yeto2 tx-center tx-16 bg-bluelight">Signalé le</th>
                         <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Niveau d'urgence</th>
+                        <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Bon de commande</th>
                         <th class="tx-orange tx-center p-3 tx-16"> </th>
                     </tr>
                     <ng-container *ngIf="dataHelper.data$ | async as items">
                         <ng-container *ngIf="items.length; else noItem">
                             <ng-container *ngFor="let panne of items;trackBy: dataHelper.trackByFn">
                                 <tr class=" bd-b">
-                                    <td class=" ">
+                                    <td class=" " *ngIf="!_automobileId">
                                         <div>
                                             <p class="mg-0 tx-gray-600 tx-bolder"> {{panne.automobile.libelle | titlecase}}</p>
                                         </div>
@@ -61,8 +62,13 @@
                                         </div>
                                     </td>
                                     <td class=" tx-center ">
-                                        <button class="btn btn-sm btn-link" (click)="onSetSelected(panne)"><i class="fad fa-info-circle tx-14 bg-gray tx-warning " style="padding:6px; border-radius:50%"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary" (click)="onSetSelected(panne)">Voir</button>
+                                    </td>
+                                    <td class=" tx-center ">
+                                        <button class="btn btn-sm btn-link" (click)="openModal(content, panne)"><i class="fad fa-search tx-14 bg-gray tx-warning " style="padding:6px; border-radius:50%"></i></button>
                                         <button class="btn btn-sm btn-link  tx-gray-600 mx-1 tx-13" (click)="onShowUpdateForm(panne)"> <i class="fal fa-edit" ></i> </button>
+                                        <button class="btn btn-sm btn-link  tx-gray-600 mx-1 tx-13" (click)="onShowCreateForm(panne)"> <i class="fal fa-clone" ></i> </button>
+
                                         <button class="btn btn-sm btn-link btn-link-danger tx-gray-600 tx-13" (click)="onDelete(panne)"> <i class="fal fa-trash-alt" ></i></button>
                                     </td>
                                 </tr>
@@ -148,3 +154,22 @@
         </td>
     </tr>
 </ng-template>
+
+<ng-template #content let-modal>
+    <div class="modal-header bg-light  ">
+        <h5 class="modal-title ">
+            {{modalData.libelle}}</h5>
+        <button type="button " class="close " aria-label="Close " (click)="modal.dismiss( 'Cross click') ">
+          <span aria-hidden="true ">&times;</span>
+          </button>
+    </div>
+    <div class="modal-body">
+        <h5>Description</h5>
+        <p style="font-size: 18px;">{{modalData.description}}</p>
+    </div>
+    <div class="modal-footer ">
+        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
+        <button type="button " class="btn btn-outline-dark " (click)="modal.close( 'Close click') ">Fermer</button>
+    </div>
+</ng-template>
+
