--- a/src/app/components/modules/tableau/tableau-bord.component.html
+++ b/src/app/components/modules/tableau/tableau-bord.component.html
@@ -24,7 +24,7 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">{{ 'HOME' | translate }}</h1>
-                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                    <a [routerLink]="[ './graphique-personnalise']"  class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                             class="fas fa-chart-line fa-sm text-white-50"></i> {{'STATISTIQUES' | translate}}</a>
                 </div>
 
