--- a/src/app/modules/transport/automobile-type/automobile-type.component.html
+++ b/src/app/modules/transport/automobile-type/automobile-type.component.html
@@ -7,7 +7,7 @@
             <table class="table table-hover text-nowrap mb-0" *ngIf="items.length; else noItem">
                 <thead class="tx-10 tx-uppercase">
                     <tr>
-                        <th scope="col">Type Automobile</th>
+                        <th scope="col">Type de vehicule</th>
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
