--- a/src/app/modules/transport/template/template.component.html
+++ b/src/app/modules/transport/template/template.component.html
@@ -45,17 +45,20 @@
                 <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-user-tie"></i> Conducteurs
                 </a>
-                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-user-tie"></i> Assurance
+                <a routerLink="/transport/assurance" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-car-crash"></i> Assurance
                 </a>
-                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-user-tie"></i> Visite Technique
+                <a routerLink="/transport/visite-technique" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-car-mechanic"></i> Visites Techniques
                 </a>
-                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                <!-- <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-user-tie"></i> cartes rapido
-                </a>
+                </a> -->
                 <a routerLink="/transport/panne" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-user-tie"></i> pannes & commandes
+                  <i class="fas fa-car-garage"></i> pannes & commandes
+                </a>
+                <a routerLink="/transport/calendrier" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-calendar"></i> Calendrier
                 </a>
               </div>
             </div>
