--- a/src/app/shared-module/sidebar/sidebar.component.html
+++ b/src/app/shared-module/sidebar/sidebar.component.html
@@ -45,6 +45,13 @@
 </li>
 
 <li *ngIf="[2, 3, 4, 5].includes(profile.user_type_id)" class="nav-item">
+  <a class="nav-link" routerLink="/bon-carburant" routerLinkActive="active">
+    <i class="fas fa-fw fa-gas-pump"></i>
+    <span>Bon de Carburant</span>
+  </a>
+</li>
+
+<li *ngIf="[2, 3, 4, 5].includes(profile.user_type_id)" class="nav-item">
   <a class="nav-link" routerLink="/annuaire" routerLinkActive="active">
     <i class="fas fa-fw fa-address-card"></i>
     <span>Annuaire</span>
